[gd_scene load_steps=6 format=2]

[ext_resource path="res://Arts/sair_botao_certo.png" type="Texture" id=1]
[ext_resource path="res://Arts/botao_jogar.png" type="Texture" id=2]
[ext_resource path="res://MenuMondIP Frenzy.gd" type="Script" id=3]
[ext_resource path="res://Arts/Som jogo.wav" type="AudioStream" id=4]
[ext_resource path="res://Arts/Mondip Frenzy.png" type="Texture" id=5]

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 484 )
texture = ExtResource( 5 )

[node name="JogarButton" type="TextureButton" parent="."]
margin_left = 552.0
margin_top = 364.0
margin_right = 745.0
margin_bottom = 428.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoJogar" type="Sprite" parent="JogarButton"]
position = Vector2( 100, 32 )
scale = Vector2( 0.589905, 0.425 )
texture = ExtResource( 2 )

[node name="SairButton" type="TextureButton" parent="."]
margin_left = 552.0
margin_top = 454.0
margin_right = 745.0
margin_bottom = 505.0
size_flags_horizontal = 5
size_flags_vertical = 5
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairBotaoCerto" type="Sprite" parent="SairButton"]
position = Vector2( 95, 18 )
scale = Vector2( 0.4125, 0.4125 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 653, 368 )

[connection signal="pressed" from="JogarButton" to="." method="_on_JogarButton_pressed"]
[connection signal="pressed" from="SairButton" to="." method="_on_SairButton_pressed"]
